grammaireParser.cpp

// Generated from grammaire.g4 by ANTLR 4.7.1


#include "grammaireVisitor.h"

#include "grammaireParser.h"


using namespace antlrcpp;
using namespace antlr4;

grammaireParser::grammaireParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

grammaireParser::~grammaireParser() {
  delete _interpreter;
}

std::string grammaireParser::getGrammarFileName() const {
  return "grammaire.g4";
}

const std::vector<std::string>& grammaireParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& grammaireParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgrammeContext ------------------------------------------------------------------

grammaireParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<grammaireParser::VarGlobaleContext *> grammaireParser::ProgrammeContext::varGlobale() {
  return getRuleContexts<grammaireParser::VarGlobaleContext>();
}

grammaireParser::VarGlobaleContext* grammaireParser::ProgrammeContext::varGlobale(size_t i) {
  return getRuleContext<grammaireParser::VarGlobaleContext>(i);
}

std::vector<grammaireParser::DefinitionContext *> grammaireParser::ProgrammeContext::definition() {
  return getRuleContexts<grammaireParser::DefinitionContext>();
}

grammaireParser::DefinitionContext* grammaireParser::ProgrammeContext::definition(size_t i) {
  return getRuleContext<grammaireParser::DefinitionContext>(i);
}


size_t grammaireParser::ProgrammeContext::getRuleIndex() const {
  return grammaireParser::RuleProgramme;
}

antlrcpp::Any grammaireParser::ProgrammeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitProgramme(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::ProgrammeContext* grammaireParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 0, grammaireParser::RuleProgramme);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(32);
        varGlobale(); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(39); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      definition();
      setState(41); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << grammaireParser::T__45)
      | (1ULL << grammaireParser::T__46)
      | (1ULL << grammaireParser::T__47))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

grammaireParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::DeclarationContext* grammaireParser::InstructionContext::declaration() {
  return getRuleContext<grammaireParser::DeclarationContext>(0);
}

grammaireParser::InitialisationContext* grammaireParser::InstructionContext::initialisation() {
  return getRuleContext<grammaireParser::InitialisationContext>(0);
}

grammaireParser::ExprContext* grammaireParser::InstructionContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}

grammaireParser::BlocContext* grammaireParser::InstructionContext::bloc() {
  return getRuleContext<grammaireParser::BlocContext>(0);
}

grammaireParser::StructureControleContext* grammaireParser::InstructionContext::structureControle() {
  return getRuleContext<grammaireParser::StructureControleContext>(0);
}


size_t grammaireParser::InstructionContext::getRuleIndex() const {
  return grammaireParser::RuleInstruction;
}

antlrcpp::Any grammaireParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::InstructionContext* grammaireParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 2, grammaireParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(43);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(44);
      initialisation();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(45);
      expr(0);
      setState(46);
      match(grammaireParser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(48);
      bloc();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(49);
      structureControle();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(50);
      match(grammaireParser::T__1);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(51);
      match(grammaireParser::T__2);
      setState(52);
      expr(0);
      setState(53);
      match(grammaireParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarGlobaleContext ------------------------------------------------------------------

grammaireParser::VarGlobaleContext::VarGlobaleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::DeclarationContext* grammaireParser::VarGlobaleContext::declaration() {
  return getRuleContext<grammaireParser::DeclarationContext>(0);
}

grammaireParser::InitialisationContext* grammaireParser::VarGlobaleContext::initialisation() {
  return getRuleContext<grammaireParser::InitialisationContext>(0);
}


size_t grammaireParser::VarGlobaleContext::getRuleIndex() const {
  return grammaireParser::RuleVarGlobale;
}

antlrcpp::Any grammaireParser::VarGlobaleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitVarGlobale(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::VarGlobaleContext* grammaireParser::varGlobale() {
  VarGlobaleContext *_localctx = _tracker.createInstance<VarGlobaleContext>(_ctx, getState());
  enterRule(_localctx, 4, grammaireParser::RuleVarGlobale);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(57);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      initialisation();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

grammaireParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::TypeContext* grammaireParser::DeclarationContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::DeclarationContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::DeclarationContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}


size_t grammaireParser::DeclarationContext::getRuleIndex() const {
  return grammaireParser::RuleDeclaration;
}

antlrcpp::Any grammaireParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::DeclarationContext* grammaireParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, grammaireParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(61);
      match(grammaireParser::T__3);
      setState(62);
      type();
      setState(63);
      match(grammaireParser::NAME);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(65);
      type();
      setState(66);
      match(grammaireParser::NAME);
      setState(67);
      match(grammaireParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(69);
      type();
      setState(70);
      match(grammaireParser::NAME);
      setState(71);
      match(grammaireParser::T__4);
      setState(72);
      match(grammaireParser::VAL);
      setState(73);
      match(grammaireParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitialisationContext ------------------------------------------------------------------

grammaireParser::InitialisationContext::InitialisationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::TypeContext* grammaireParser::InitialisationContext::type() {
  return getRuleContext<grammaireParser::TypeContext>(0);
}

tree::TerminalNode* grammaireParser::InitialisationContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::InitialisationContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

grammaireParser::ParametreAppelContext* grammaireParser::InitialisationContext::parametreAppel() {
  return getRuleContext<grammaireParser::ParametreAppelContext>(0);
}


size_t grammaireParser::InitialisationContext::getRuleIndex() const {
  return grammaireParser::RuleInitialisation;
}

antlrcpp::Any grammaireParser::InitialisationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitInitialisation(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::InitialisationContext* grammaireParser::initialisation() {
  InitialisationContext *_localctx = _tracker.createInstance<InitialisationContext>(_ctx, getState());
  enterRule(_localctx, 8, grammaireParser::RuleInitialisation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      type();
      setState(78);
      match(grammaireParser::NAME);
      setState(79);
      match(grammaireParser::T__4);
      setState(80);
      match(grammaireParser::VAL);
      setState(81);
      match(grammaireParser::T__6);
      setState(82);
      match(grammaireParser::T__7);
      setState(83);
      match(grammaireParser::T__8);
      setState(84);
      parametreAppel();
      setState(85);
      match(grammaireParser::T__9);
      setState(86);
      match(grammaireParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(88);
      type();
      setState(89);
      match(grammaireParser::NAME);
      setState(90);
      match(grammaireParser::T__7);
      setState(91);
      match(grammaireParser::VAL);
      setState(92);
      match(grammaireParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(94);
      match(grammaireParser::T__3);
      setState(95);
      type();
      setState(96);
      match(grammaireParser::NAME);
      setState(97);
      match(grammaireParser::T__7);
      setState(98);
      match(grammaireParser::VAL);
      setState(99);
      match(grammaireParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

grammaireParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::AffectationContext* grammaireParser::ExprContext::affectation() {
  return getRuleContext<grammaireParser::AffectationContext>(0);
}

tree::TerminalNode* grammaireParser::ExprContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

tree::TerminalNode* grammaireParser::ExprContext::VAL() {
  return getToken(grammaireParser::VAL, 0);
}

tree::TerminalNode* grammaireParser::ExprContext::CHAR() {
  return getToken(grammaireParser::CHAR, 0);
}

std::vector<grammaireParser::ExprContext *> grammaireParser::ExprContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ExprContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}

grammaireParser::ParametreAppelContext* grammaireParser::ExprContext::parametreAppel() {
  return getRuleContext<grammaireParser::ParametreAppelContext>(0);
}


size_t grammaireParser::ExprContext::getRuleIndex() const {
  return grammaireParser::RuleExpr;
}

antlrcpp::Any grammaireParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


grammaireParser::ExprContext* grammaireParser::expr() {
   return expr(0);
}

grammaireParser::ExprContext* grammaireParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  grammaireParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  grammaireParser::ExprContext *previousContext = _localctx;
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, grammaireParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(122);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(104);
      affectation();
      break;
    }

    case 2: {
      setState(105);
      match(grammaireParser::NAME);
      break;
    }

    case 3: {
      setState(106);
      match(grammaireParser::VAL);
      break;
    }

    case 4: {
      setState(107);
      match(grammaireParser::CHAR);
      break;
    }

    case 5: {
      setState(108);
      match(grammaireParser::NAME);
      setState(109);
      match(grammaireParser::T__4);
      setState(110);
      expr(0);
      setState(111);
      match(grammaireParser::T__6);
      break;
    }

    case 6: {
      setState(113);
      match(grammaireParser::NAME);
      setState(114);
      match(grammaireParser::T__10);
      setState(115);
      parametreAppel();
      setState(116);
      match(grammaireParser::T__11);
      break;
    }

    case 7: {
      setState(118);
      match(grammaireParser::T__28);
      setState(119);
      expr(2);
      break;
    }

    case 8: {
      setState(120);
      match(grammaireParser::T__29);
      setState(121);
      expr(1);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(174);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(172);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(124);

          if (!(precpred(_ctx, 18))) throw FailedPredicateException(this, "precpred(_ctx, 18)");
          setState(125);
          match(grammaireParser::T__12);
          setState(126);
          expr(19);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(127);

          if (!(precpred(_ctx, 17))) throw FailedPredicateException(this, "precpred(_ctx, 17)");
          setState(128);
          match(grammaireParser::T__13);
          setState(129);
          expr(18);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(130);

          if (!(precpred(_ctx, 16))) throw FailedPredicateException(this, "precpred(_ctx, 16)");
          setState(131);
          match(grammaireParser::T__14);
          setState(132);
          expr(17);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(133);

          if (!(precpred(_ctx, 15))) throw FailedPredicateException(this, "precpred(_ctx, 15)");
          setState(134);
          match(grammaireParser::T__15);
          setState(135);
          expr(16);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(136);

          if (!(precpred(_ctx, 14))) throw FailedPredicateException(this, "precpred(_ctx, 14)");
          setState(137);
          match(grammaireParser::T__16);
          setState(138);
          expr(15);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(139);

          if (!(precpred(_ctx, 13))) throw FailedPredicateException(this, "precpred(_ctx, 13)");
          setState(140);
          match(grammaireParser::T__17);
          setState(141);
          expr(14);
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(142);

          if (!(precpred(_ctx, 12))) throw FailedPredicateException(this, "precpred(_ctx, 12)");
          setState(143);
          match(grammaireParser::T__18);
          setState(144);
          expr(13);
          break;
        }

        case 8: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(145);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(146);
          match(grammaireParser::T__19);
          setState(147);
          expr(12);
          break;
        }

        case 9: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(148);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(149);
          match(grammaireParser::T__20);
          setState(150);
          expr(11);
          break;
        }

        case 10: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(151);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(152);
          match(grammaireParser::T__21);
          setState(153);
          expr(10);
          break;
        }

        case 11: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(154);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(155);
          match(grammaireParser::T__22);
          setState(156);
          expr(9);
          break;
        }

        case 12: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(157);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(158);
          match(grammaireParser::T__23);
          setState(159);
          expr(8);
          break;
        }

        case 13: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(160);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(161);
          match(grammaireParser::T__24);
          setState(162);
          expr(7);
          break;
        }

        case 14: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(163);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(164);
          match(grammaireParser::T__25);
          setState(165);
          expr(6);
          break;
        }

        case 15: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(166);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(167);
          match(grammaireParser::T__26);
          setState(168);
          expr(5);
          break;
        }

        case 16: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(169);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(170);
          match(grammaireParser::T__27);
          setState(171);
          expr(4);
          break;
        }

        } 
      }
      setState(176);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ParametreAppelContext ------------------------------------------------------------------

grammaireParser::ParametreAppelContext::ParametreAppelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<grammaireParser::ExprContext *> grammaireParser::ParametreAppelContext::expr() {
  return getRuleContexts<grammaireParser::ExprContext>();
}

grammaireParser::ExprContext* grammaireParser::ParametreAppelContext::expr(size_t i) {
  return getRuleContext<grammaireParser::ExprContext>(i);
}


size_t grammaireParser::ParametreAppelContext::getRuleIndex() const {
  return grammaireParser::RuleParametreAppel;
}

antlrcpp::Any grammaireParser::ParametreAppelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitParametreAppel(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::ParametreAppelContext* grammaireParser::parametreAppel() {
  ParametreAppelContext *_localctx = _tracker.createInstance<ParametreAppelContext>(_ctx, getState());
  enterRule(_localctx, 12, grammaireParser::RuleParametreAppel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(187);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case grammaireParser::T__28:
      case grammaireParser::T__29:
      case grammaireParser::T__40:
      case grammaireParser::T__41:
      case grammaireParser::NAME:
      case grammaireParser::VAL:
      case grammaireParser::CHAR: {
        enterOuterAlt(_localctx, 1);
        setState(182);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(177);
            expr(0);
            setState(178);
            match(grammaireParser::T__30); 
          }
          setState(184);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
        }
        setState(185);
        expr(0);
        break;
      }

      case grammaireParser::T__31: {
        enterOuterAlt(_localctx, 2);
        setState(186);
        match(grammaireParser::T__31);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AffectationContext ------------------------------------------------------------------

grammaireParser::AffectationContext::AffectationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

grammaireParser::LeftValueContext* grammaireParser::AffectationContext::leftValue() {
  return getRuleContext<grammaireParser::LeftValueContext>(0);
}

grammaireParser::ExprContext* grammaireParser::AffectationContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}


size_t grammaireParser::AffectationContext::getRuleIndex() const {
  return grammaireParser::RuleAffectation;
}

antlrcpp::Any grammaireParser::AffectationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitAffectation(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::AffectationContext* grammaireParser::affectation() {
  AffectationContext *_localctx = _tracker.createInstance<AffectationContext>(_ctx, getState());
  enterRule(_localctx, 14, grammaireParser::RuleAffectation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(235);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(189);
      leftValue();
      setState(190);
      match(grammaireParser::T__7);
      setState(191);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(193);
      leftValue();
      setState(194);
      match(grammaireParser::T__32);
      setState(195);
      expr(0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(197);
      leftValue();
      setState(198);
      match(grammaireParser::T__33);
      setState(199);
      expr(0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(201);
      leftValue();
      setState(202);
      match(grammaireParser::T__34);
      setState(203);
      expr(0);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(205);
      leftValue();
      setState(206);
      match(grammaireParser::T__35);
      setState(207);
      expr(0);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(209);
      leftValue();
      setState(210);
      match(grammaireParser::T__36);
      setState(211);
      expr(0);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(213);
      leftValue();
      setState(214);
      match(grammaireParser::T__37);
      setState(215);
      expr(0);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(217);
      leftValue();
      setState(218);
      match(grammaireParser::T__38);
      setState(219);
      expr(0);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(221);
      leftValue();
      setState(222);
      match(grammaireParser::T__39);
      setState(223);
      expr(0);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(225);
      match(grammaireParser::T__40);
      setState(226);
      leftValue();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(227);
      match(grammaireParser::T__41);
      setState(228);
      leftValue();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(229);
      leftValue();
      setState(230);
      match(grammaireParser::T__40);
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(232);
      leftValue();
      setState(233);
      match(grammaireParser::T__41);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LeftValueContext ------------------------------------------------------------------

grammaireParser::LeftValueContext::LeftValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* grammaireParser::LeftValueContext::NAME() {
  return getToken(grammaireParser::NAME, 0);
}

grammaireParser::ExprContext* grammaireParser::LeftValueContext::expr() {
  return getRuleContext<grammaireParser::ExprContext>(0);
}


size_t grammaireParser::LeftValueContext::getRuleIndex() const {
  return grammaireParser::RuleLeftValue;
}

antlrcpp::Any grammaireParser::LeftValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<grammaireVisitor*>(visitor))
    return parserVisitor->visitLeftValue(this);
  else
    return visitor->visitChildren(this);
}

grammaireParser::LeftValueContext* grammaireParser::leftValue() {
  LeftValueContext *_localctx = _tracker.createInstance<LeftValueContext>(_ctx, getState());
  enterRule(_localctx, 16, grammaireParser::RuleLeftValue);
